grapped the turn and reset components in a div called top to align them correctly

--- a/src/Components/Board/Board.module.css
+++ b/src/Components/Board/Board.module.css
@@ -14,6 +14,12 @@
 
   grid-gap: 15px;
 }
+.top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .box {
   background-color: #24353f;
